Added the method for best vals
The best factors according to their values' excess over successful territories' averages
